--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
